feat: add god card appearing when clicking player label in game

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -31,6 +31,7 @@ error_invalid_nickname_generic = Invalid nickname!
 error_invalid_nickname_length = Nickname is too long! (30 characters at most)
 error_nickname_taken = Nickname is already taken!
 god = God
+god_description = God Description:
 ground = ground
 height_abbr = h.
 insert_a_valid_coordinate = Insert a valid coordinate
@@ -52,6 +53,8 @@ press_return_to_begin = Press 'Return' to begin...
 press_return_to_continue = Press 'Return' to continue...
 rejoin_as_spectator = Rejoin as Spectator
 s_won = %s won
+s_god = %s's god card:
+select_god_card = Select God Card
 server_address = Server address
 server_found = Server Found!
 set_nickname = Set Nickname
