--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -31,6 +31,7 @@ error_invalid_nickname_generic = Nickname non valido!
 error_invalid_nickname_length = Nickname troppo lungo! (Max. 30 caratteri)
 error_nickname_taken = Nickname già presente!
 god = Divinità
+god_description = Descrizione della Divinità:
 ground = terra
 height_abbr = alt.
 insert_a_valid_coordinate = Inserisci una coordinata valida
@@ -52,6 +53,8 @@ press_return_to_begin = Premi 'Invio' per cominciare...
 press_return_to_continue = Premi 'Invio' per continuare...
 rejoin_as_spectator = Rientra come spettatore
 s_won = %s ha vinto la partita
+s_god = Divinità di %s:
+select_god_card = Seleziona Carta Divinità
 server_address = Indirizzo del server
 server_found = Server trovato!
 set_nickname = Imposta il nickname
