feat: add lose screen for player that loses during game
TODO: disconnect screen

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -36,7 +36,7 @@ ground = ground
 height_abbr = h.
 insert_a_valid_coordinate = Insert a valid coordinate
 is_not_an_integer = is not an integer
-join_another_lobby = Join Another Lobby
+join_another_lobby = New Game
 join_lobby = Join Lobby
 legend = Legend
 looking_for_a_match = Looking for a match...
