--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -36,7 +36,7 @@ ground = terra
 height_abbr = alt.
 insert_a_valid_coordinate = Inserisci una coordinata valida
 is_not_an_integer = non e' un intero
-join_another_lobby=Unisciti ad una nuova Partita
+join_another_lobby=Nuova Partita
 join_lobby=Unisciti ad una Partita
 legend = Legenda
 looking_for_a_match = Ricerca di una partita...
@@ -93,7 +93,7 @@ you_cant_build_in_the_specified_cell = Non puoi costruire nella cella specificat
 you_cant_build_with_the_specified_worker = Non puoi costruire con il worker specificato
 you_cant_move_the_specified_worker = Non puoi muovere il worker specificato
 you_cant_place_the_worker_in_the_specified_cell = Non puoi posizionare il worker nella cella specificata
-you_lost = You lost.
+you_lost = Hai perso.
 currently_playing = Giocatore Attivo
 waiting_for_their_turn = In Attesa del proprio turno
 spectating = Spettatore
