feat: add disconnect screen

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -20,6 +20,7 @@ credits_text = Adaptation of the "Santorini" game by Cranio Creations Srl.\n\n\
 Written for the final software engineering project by:\n\n\
 Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nUnder the supervision of prof. Cugola
 default = default
+disconnected = Disconnected!
 disconnected_from_the_server = You have been disconnected from the server. See you soon!
 do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
 do_you_want_to_keep_watching_the_game = Do you want to keep watching the game?
