--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -20,6 +20,7 @@ credits_text = Adattamento del gioco "Santorini" di Cranio Creations Srl.\n\n\
 Sviluppato per la prova finale di Ingegneria del Software da:\n\n\
 Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nSotto la supervisione del prof. Cugola
 default = default
+disconnected = Disconnesso!
 disconnected_from_the_server = Sei stato disconnesso dal server. A presto!
 do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
 do_you_want_to_keep_watching_the_game = Vuoi continuare ad assistere come spettatore a questa partita?
