feat: show god description in cli [sonar]

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -23,6 +23,7 @@ default = default
 disconnected = Disconnected!
 disconnected_from_the_server = You have been disconnected from the server. See you soon!
 do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
+do_you_want_to_confirm_the_choice_of_this_god = Do you want to confirm the choice of this god?
 do_you_want_to_keep_watching_the_game = Do you want to keep watching the game?
 do_you_want_to_start_a_new_match = Do you want to start a new match?
 dome = dome
@@ -33,6 +34,7 @@ error_invalid_nickname_length = Nickname is too long! (30 characters at most)
 error_nickname_taken = Nickname is already taken!
 god = God
 god_description = God Description:
+gods_already_chosen = Gods already chosen
 ground = ground
 height_abbr = h.
 insert_a_valid_coordinate = Insert a valid coordinate
@@ -62,7 +64,6 @@ set_nickname = Set Nickname
 settings = Settings
 skip=Skip
 the_chosen_god_is_invalid = The chosen god is invalid
-the_chosen_god_was_already_taken = The chosen god was already taken
 the_chosen_player_is_invalid = The chosen player is invalid
 the_players_for_this_match_are = The players for this match are
 three_players = Three Players
