--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -23,6 +23,7 @@ default = default
 disconnected = Disconnesso!
 disconnected_from_the_server = Sei stato disconnesso dal server. A presto!
 do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
+do_you_want_to_confirm_the_choice_of_this_god = Confermi la scelta di questa divinità?
 do_you_want_to_keep_watching_the_game = Vuoi continuare ad assistere come spettatore a questa partita?
 do_you_want_to_start_a_new_match = Vuoi iniziare una nuova partita?
 dome = cupola
@@ -33,6 +34,7 @@ error_invalid_nickname_length = Nickname troppo lungo! (Max. 30 caratteri)
 error_nickname_taken = Nickname già presente!
 god = Divinità
 god_description = Descrizione della Divinità:
+gods_already_chosen = Divinità già scelte
 ground = terra
 height_abbr = alt.
 insert_a_valid_coordinate = Inserisci una coordinata valida
@@ -62,7 +64,6 @@ set_nickname = Imposta il nickname
 settings = Impostazioni
 skip=Salta
 the_chosen_god_is_invalid = La divinita' scelta non e' valida
-the_chosen_god_was_already_taken = La divinita' scelta e' gia' stata scelta da un altro giocatore
 the_chosen_player_is_invalid = Il giocatore scelto non e' valido
 the_players_for_this_match_are = I giocatori di questa partita sono
 three_players = Tre giocatori
