fix: implement sonar suggestions

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -32,6 +32,8 @@ error = Error
 error_invalid_nickname_generic = Invalid nickname!
 error_invalid_nickname_length = Nickname is too long! (30 characters at most)
 error_nickname_taken = Nickname is already taken!
+error_cannot_connect = Cannot connect to the server
+error_invalid_port = Port is not valid
 god = God
 god_description = God Description:
 gods_already_chosen = Gods already chosen
