--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -31,6 +31,8 @@ e_g = es.
 error = Errore
 error_invalid_nickname_generic = Nickname non valido!
 error_invalid_nickname_length = Nickname troppo lungo! (Max. 30 caratteri)
+error_cannot_connect = Impossibile stabilire una connessione con il server specificato
+error_invalid_port = La porta non è valida
 error_nickname_taken = Nickname già presente!
 god = Divinità
 god_description = Descrizione della Divinità:
