feat: add ability to change language at runtime

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -34,6 +34,7 @@ error_invalid_nickname_length = Nickname is too long! (30 characters at most)
 error_nickname_taken = Nickname is already taken!
 error_cannot_connect = Cannot connect to the server
 error_invalid_port = Port is not valid
+game_language = Game Language
 god = God
 god_description = God Description:
 gods_already_chosen = Gods already chosen
@@ -59,6 +60,7 @@ press_return_to_continue = Press 'Return' to continue...
 rejoin_as_spectator = Rejoin as Spectator
 s_won = %s won
 s_god = %s's god card:
+save_settings = Save Settings
 select_god_card = Select God Card
 server_address = Server address
 server_found = Server Found!
