--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -34,6 +34,7 @@ error_invalid_nickname_length = Nickname troppo lungo! (Max. 30 caratteri)
 error_cannot_connect = Impossibile stabilire una connessione con il server specificato
 error_invalid_port = La porta non è valida
 error_nickname_taken = Nickname già presente!
+game_language = Lingua del Gioco
 god = Divinità
 god_description = Descrizione della Divinità:
 gods_already_chosen = Divinità già scelte
@@ -59,6 +60,7 @@ press_return_to_continue = Premi 'Invio' per continuare...
 rejoin_as_spectator = Rientra come spettatore
 s_won = %s ha vinto la partita
 s_god = Divinità di %s:
+save_settings = Salva le Impostazioni
 select_god_card = Seleziona Carta Divinità
 server_address = Indirizzo del server
 server_found = Server trovato!
