chore: update graphic appearance of credits

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -16,9 +16,15 @@ connect = Connect
 connect_to_server_prompt_1 = Ready to Challenge other Players?
 connect_to_server_prompt_2 = Type in the Server's IP Address and Port to find a match!
 credits = Credits
-credits_text = Adaptation of the "Santorini" game by Cranio Creations Srl.\n\n\
-Written for the final software engineering project by:\n\n\
-Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nUnder the supervision of prof. Cugola
+credits_text_1 = Adaptation of the 
+credits_text_2 = Santorini 
+credits_text_3 = game by 
+credits_text_4 = Cranio Creations Srl.\n
+credits_text_5 = Written for the final software engineering project (Politecnico di Milano) by:\n
+credits_text_6 = Andrea Riva\n
+credits_text_7 = Alessandro Sanvito\n
+credits_text_8 = Kien Tuong Truong\n
+credits_text_9 = Under the supervision of prof. Gianpaolo Cugola
 default = default
 disconnected = Disconnected!
 disconnected_from_the_server = You have been disconnected from the server. See you soon!
