--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -16,9 +16,15 @@ connect = Connettiti
 connect_to_server_prompt_1 = Pronto a Sfidare altri Giocatori?
 connect_to_server_prompt_2 = Digita l'indirizzo IP e la porta del server per trovare una partita!
 credits = Credits
-credits_text = Adattamento del gioco "Santorini" di Cranio Creations Srl.\n\n\
-Sviluppato per la prova finale di Ingegneria del Software da:\n\n\
-Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nSotto la supervisione del prof. Cugola
+credits_text_1 = Adattamento di 
+credits_text_2 = Santorini
+credits_text_3 = , un gioco della
+credits_text_4 = Cranio Creations Srl.\n
+credits_text_5 = Scritto per la Prova Finale di Ingegneria del Software (Politecnico di Milano) da:\n
+credits_text_6 = Andrea Riva\n
+credits_text_7 = Alessandro Sanvito\n
+credits_text_8 = Kien Tuong Truong\n
+credits_text_9 = Sotto la supervisione del prof. Gianpaolo Cugola
 default = default
 disconnected = Disconnesso!
 disconnected_from_the_server = Sei stato disconnesso dal server. A presto!
