fix: typo in italian translation [skip ci]

--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -146,7 +146,7 @@ athena_description=Turno dell'avversario: se nel tuo ultimo turno uno dei tuoi l
 atlas_description=Tua costruzione: il tuo lavoratore può costruire una cupola su qualsiasi livello, compreso il terreno.
 demeter_description=Tua costruzione: il tuo lavoratore può costruire una volta in più, ma non nella stessa casella.
 hephaestus_description=Tua costruzione: il tuo lavoratore può costruire un blocco aggiuntivo (non una cupola) al di sopra del primo blocco.
-hera_description=Turno dell'avversario: un avversario non può vincere spsotandosi su una casella perimetrale.
+hera_description=Turno dell'avversario: un avversario non può vincere spostandosi su una casella perimetrale.
 hestia_description=Tua costruzione: il tuo lavoratore può costruire una volta in più, anche nella stessa casella; la costruzione aggiuntiva, però, non può avvenire su una casella perimetrale.
 hypnus_description=Inizio del turno dell'avversario: se uno dei lavoratori del tuo avversario si trova a un livello superiore rispetto agli altri lavoratori dello stesso giocatore, non può muoversi.
 minotaur_description=Tuo spostamento: il tuo lavoratore può spostarsi nella casella di un lavoratore avversario (in base alle normali regole di spostamento) se la casella successiva nella stessa direzione è libera. Il lavoratore avversario è costretto a spostarsi in quella casella (indipendentemente dal livello).
