feat: add menu confirmation screen

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -1,6 +1,8 @@
 ask_start_player_prompt = Ready to win?
 ask_worker_start_position_passive_prompt = Wait patiently...
 ask_worker_start_position_prompt = Choose wisely...
+are_you_sure = Are you sure?
+back = Go back
 block = block
 cancel=Cancel
 choose_between_block_or_dome = Choose between BLOCK or DOME
@@ -54,6 +56,7 @@ legend = Legend
 looking_for_a_match = Looking for a match...
 loser=Better luck next time...
 menu = Menu
+menu_confirmation = This will disconnect all other players and terminate the match.
 nickname = Nickname
 nickname_prompt = Type your nickname to start playing!
 no = no
