--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -1,6 +1,8 @@
 ask_start_player_prompt = Pronto a vincere?
 ask_worker_start_position_passive_prompt = Aspetta pazientemente...
 ask_worker_start_position_prompt = Scegli saggiamente...
+are_you_sure = Sei sicuro?
+back = Torna indietro
 block = blocco
 cancel=Cancella
 choose_between_block_or_dome = Scegli tra BLOCCO o CUPOLA
@@ -54,6 +56,7 @@ legend = Legenda
 looking_for_a_match = Ricerca di una partita...
 loser=Andrà meglio la prossima volta...
 menu = Menu'
+menu_confirmation = Questa azione farà disconnettere tutti i giocatori e terminerà la partita.
 nickname = Nickname
 nickname_prompt = Digita il tuo nickname per cominciare a giocare!
 no = no
