fix: remove accent in Italian menu translation [skip ci]

--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -55,7 +55,7 @@ join_lobby=Unisciti ad una Partita
 legend = Legenda
 looking_for_a_match = Ricerca di una partita...
 loser=Andrà meglio la prossima volta...
-menu = Menu'
+menu = Menu
 menu_confirmation = Questa azione farà disconnettere tutti i giocatori e terminerà la partita.
 nickname = Nickname
 nickname_prompt = Digita il tuo nickname per cominciare a giocare!
