fix(credits): fix minor bugs in credits [skip ci]

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -9,28 +9,28 @@ choose_between_block_or_dome = Choose between BLOCK or DOME
 choose_between_yes_or_no = Choose between YES or NO
 choose_d_gods_that_will_be_available = Choose the %d gods that will be available in this match
 choose_one_of_your_workers = Choose one of your workers
-choose_the_god_d = Choose the god %d
-choose_the_player_that_will_start_first = Choose the player that will start first
-choose_your_god = Choose your god
-color = Color
-congratulations_you_won = Congratulations, you won!
-connect = Connect
-connect_to_server_prompt_1 = Ready to Challenge other Players?
-connect_to_server_prompt_2 = Type in the Server's IP Address and Port to find a match!
-credits = Credits
-credits_text_1 = Adaptation of the 
-credits_text_2 = Santorini 
-credits_text_3 = game by 
-credits_text_4 = Cranio Creations Srl.\n
-credits_text_5 = Written for the final software engineering project (Politecnico di Milano) by:\n
-credits_text_6 = Andrea Riva\n
-credits_text_7 = Alessandro Sanvito\n
-credits_text_8 = Kien Tuong Truong\n
-credits_text_9 = Under the supervision of prof. Gianpaolo Cugola
-default = default
-disconnected = Disconnected!
-disconnected_from_the_server = You have been disconnected from the server. See you soon!
-do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
+choose_the_god_d=Choose the god %d
+choose_the_player_that_will_start_first=Choose the player that will start first
+choose_your_god=Choose your god
+color=Color
+congratulations_you_won=Congratulations, you won!
+connect=Connect
+connect_to_server_prompt_1=Ready to Challenge other Players?
+connect_to_server_prompt_2=Type in the Server's IP Address and Port to find a match!
+credits=Credits
+credits_text_1=Adaptation of the 
+credits_text_2=Santorini
+credits_text_3=, a game distributed by 
+credits_text_4=Cranio Creations Srl.\n
+credits_text_5=Written for the final software engineering project (Politecnico di Milano) by:\n
+credits_text_6=Andrea Riva\n
+credits_text_7=Alessandro Sanvito\n
+credits_text_8=Kien Tuong Truong\n
+credits_text_9=Under the supervision of prof. Gianpaolo Cugola
+default=default
+disconnected=Disconnected!
+disconnected_from_the_server=You have been disconnected from the server. See you soon!
+do_you_want_to_build_a_block_or_a_dome=Do you want to build a BLOCK or a DOME?
 do_you_want_to_confirm_the_choice_of_this_god = Do you want to confirm the choice of this god?
 do_you_want_to_keep_watching_the_game = Do you want to keep watching the game?
 do_you_want_to_start_a_new_match = Do you want to start a new match?
