--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -19,9 +19,9 @@ connect_to_server_prompt_1 = Pronto a Sfidare altri Giocatori?
 connect_to_server_prompt_2 = Digita l'indirizzo IP e la porta del server per trovare una partita!
 credits = Credits
 credits_text_1 = Adattamento di 
-credits_text_2 = Santorini
-credits_text_3 = , un gioco della
-credits_text_4 = Cranio Creations Srl.\n
+credits_text_2=Santorini
+credits_text_3=, un gioco distribuito da 
+credits_text_4=Cranio Creations Srl.\n
 credits_text_5 = Scritto per la Prova Finale di Ingegneria del Software (Politecnico di Milano) da:\n
 credits_text_6 = Andrea Riva\n
 credits_text_7 = Alessandro Sanvito\n
