fix(credits): fix minor bugs in credits [skip ci]

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -18,7 +18,7 @@ connect=Connect
 connect_to_server_prompt_1=Ready to Challenge other Players?
 connect_to_server_prompt_2=Type in the Server's IP Address and Port to find a match!
 credits=Credits
-credits_text_1=Adaptation of the 
+credits_text_1=Adaptation of 
 credits_text_2=Santorini
 credits_text_3=, a game distributed by 
 credits_text_4=Cranio Creations Srl.\n
