chore: fix italian i18n by changing "worker" to "lavoratore"

--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -8,7 +8,7 @@ cancel=Cancella
 choose_between_block_or_dome = Scegli tra BLOCCO o CUPOLA
 choose_between_yes_or_no = Scegli tra SI o NO
 choose_d_gods_that_will_be_available = Scegli le %d divinita' che saranno disponibili in questa partita
-choose_one_of_your_workers = Seleziona uno dei tuoi worker
+choose_one_of_your_workers = Seleziona uno dei tuoi lavoratori
 choose_the_god_d = Scegli la %d^ divinita'
 choose_the_player_that_will_start_first = Scegli il giocatore che iniziera' per primo
 choose_your_god = Scegli la tua divinita'
@@ -88,26 +88,26 @@ wait_for_s_to_choose_the_gods = Attendi che %s scelga le divinita' che saranno d
 wait_for_s_to_choose_the_starting_player = Attendi che %s scelga il giocatore che iniziera' per primo...
 wait_for_s_to_choose_their_god = Attendi che %s scelga la sua divinita'...
 wait_for_s_to_perform_their_build = Attendi che %s costruisca...
-wait_for_s_to_perform_their_move = Attendi che %s muova un suo worker...
-wait_for_s_to_place_their_workers = Attendi che %s posizioni i suoi worker...
+wait_for_s_to_perform_their_move = Attendi che %s muova un suo lavoratore...
+wait_for_s_to_place_their_workers = Attendi che %s posizioni i suoi lavoratori...
 wait_player_choose_god_prompt = Preparati per la Battaglia!
 wait_players_prompt = Attendi mentre cerchiamo un degno avversario...
 waiting_for_the_other_players = In attesa degli altri giocatori...
 welcome_to_the_server_s = Benvenuto nel server, %s!
 where_do_you_want_to_build = Dove vuoi costruire?
-where_do_you_want_to_place_your_worker = Dove vuoi posizionare il tuo worker?
-which_worker_do_you_want_to_move = Quale worker vuoi muovere?
-which_worker_do_you_want_to_use_to_build = Quale worker vuoi usare per costruire?
-workers = Workers
+where_do_you_want_to_place_your_worker = Dove vuoi posizionare il tuo lavoratore?
+which_worker_do_you_want_to_move = Quale lavoratore vuoi muovere?
+which_worker_do_you_want_to_use_to_build = Quale lavoratore vuoi usare per costruire?
+workers = Lavoratori
 x_to_cancel = X per annullare
 x_to_skip = X per saltare
 yes = si
 you_are_the_first_player_in_the_server = Sei il primo giocatore nel server
 you_can_choose_one_of_these_gods = Puoi scegliere una di queste divinita'
 you_cant_build_in_the_specified_cell = Non puoi costruire nella cella specificata
-you_cant_build_with_the_specified_worker = Non puoi costruire con il worker specificato
-you_cant_move_the_specified_worker = Non puoi muovere il worker specificato
-you_cant_place_the_worker_in_the_specified_cell = Non puoi posizionare il worker nella cella specificata
+you_cant_build_with_the_specified_worker = Non puoi costruire con il lavoratore specificato
+you_cant_move_the_specified_worker = Non puoi muovere il lavoratore specificato
+you_cant_place_the_worker_in_the_specified_cell = Non puoi posizionare il lavoratore nella cella specificata
 you_lost = Hai perso.
 currently_playing = Giocatore Attivo
 waiting_for_their_turn = In Attesa del proprio turno
