chore: fix typos

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -151,8 +151,8 @@ demeter_description=Your build: Your worker may build one additional time, but n
 hephaestus_description=Your build: Your worker may build one additional block (not dome) on top of your first block.
 hera_description=Opponent's turn: An opponent cannot win by moving into a perimeter space.
 hestia_description=Your build: Your worker may build one additional time, but this cannot be on a perimeter space.
-hypnus_description=Start of Opponent's turn: If one of your opponent's Workers is higher than all of thair others, it cannot move.
-minotaur_description=Your move: Your worker may move into an opponent worker's space, if their worker can be forced one space straight backwards to an unoccopied space at any level.
+hypnus_description=Start of Opponent's turn: If one of your opponent's Workers is higher than all of their others, it cannot move.
+minotaur_description=Your move: Your worker may move into an opponent worker's space, if their worker can be forced one space straight backwards to an unoccupied space at any level.
 pan_description=Win condition: You also win if your worker moves down two or more levels.
 prometheus_description=Your turn: If your worker does not move up, it may build both before and after moving.
 triton_description=Your Move: Each time your Worker moves into a perimeter space, it may immediately move again.
